update credit editor activity